6 June 2066: Wouter
	- zonec checks for data below a DNAME, and will not create the db,
	  as per rfc 2672. Tpkg test to make sure such a zone is not loaded.
	- updated rr-test tpkg so it has no data below a DNAME.

2 June 2006: Wouter
	- dname_replace function that does DNAME replace and unit tests.
	- added error codes from DNSUPD rfc2136 to constants in dns.h.
	- in query.c added DNAME following code.
	- fixed bug 134: hints[i] in nsd.c to hints[0].
	- added tpkg small test for DNAME.
	- tpkg to test bug 134 (starts 100 processes).

1 June 2006: Wouter
	- tsig test with NSD master and NSD slave server. Tsig AXFR transfer.
	  nsd-xfer used to test slave zone contents.
	- fixed bug where buffer_flip() is done before appending tsig rr.
	- version printed at start of nsd in logfile.
	- xfrd prints name of tsig key used during transfer in commit comments
	  so it appears in the log file and in zonefile after nsd-patch.
	- prints RRs from diff file only if debug level >= 1.
	- scalable transfer test xfr_gig added, you can set the size to try
	  in the .pre file. Now set very small.

31 May 2006: Wouter
	- xfrd check for failed updates. It compares the time it wrote the
	  commit to disk with the time of the last reload command.
	  Failed updates are restarted like the zone is notified of the soa.
	  It also catches reloads that have been lost (reload cmd while reload
	  is running, or a crashed reload process, for example).
	- when reload is issued, times at that second are put back one second,
	  so that after a reload all the zones that should have been loaded
	  have a time from before the reload. 
	- if a reload crashes, NSD will continue with the old database,
	  xfrd is not informed, since it cannot fix that. 
	- nsd-checkconf strdups arg strings before writing to it.
	- tsig error replies contain error data, but no signature.
	  also crashproof, badly formatted tsigs get a format error.
	- tsig error print knows about DNS rcodes in tsig error field.